    /etc/shorewall/params was processed.

2)  The compiled script could fail with an error such as the following
    when the internal traffic shaper was enabled:

    ERROR: Command "tc qdisc add dev dsl0 root handle 1: htb
    	   default 0 r2q 5.5" Failed

3)  The help output from the install.sh scripts mentioned the '-n'
    option but support for that option has been removed.

----------------------------------------------------------------------------
             K N O W N   P R O B L E M S   R E M A I N I N G
----------------------------------------------------------------------------

None.

----------------------------------------------------------------------------
                N E W   F E A T U R E S   I N   4 . 4 . 0 Beta 2
----------------------------------------------------------------------------

1)  A 'upnpclient' option has been added to
    /etc/shorewall/interfaces. This option is intended for laptop users
    who always run Shorewall on their system yet need to run
    UPnP-enabled client apps such as Transmission (BitTorrent client).

    The option causes Shorewall to detect the default gateway through
    the interface and to accept UDP packets from that gateway. Note
    that, like all aspects of UPnP, this is a security hole so use this
    option at your own risk.

----------------------------------------------------------------------------
                 N E W   F E A T U R E S   IN   4 . 4
----------------------------------------------------------------------------

1)  The Shorewall packaging has been completely revamped in Shorewall
    4.4.

    The new packages are:

    - Shorewall.   Includes the former Shorewall-common and
                   Shorewall-perl packages. Includes everything needed
                   to create an IPv4 firewall.

    - Shorewall6.  Requires Shorewall. Adds the components necessary to
      		   create an IPv6 firewall.

    - Shorewall-lite

		   May be installed on a firewall system to run