@@ -128,15 +128,6 @@
       </listitem>
 
       <listitem>
-        <para><filename>continue</filename> -- invoked to allow you to insert
-        special rules to allow traffic while Shorewall is [re]starting. Any
-        rules added in this script should be deleted in your
-        <emphasis>start</emphasis> script. This script is invoked earlier in
-        the [re]start process than is the <emphasis>initdone</emphasis> script
-        described above (Not used by Shorewall Perl).</para>
-      </listitem>
-
-      <listitem>
         <para><filename>maclog</filename> -- invoked while mac filtering rules
         are being created. It is invoked once for each interface having
         'maclist' specified and it is invoked just before the logging rule is
