@@ -126,6 +126,9 @@ Shorewall 4.4.0 Beta 2
 3)  The help output from the install.sh scripts mentioned the '-n'
     option but support for that option has been removed.
 
+4)  The 'continue' script is no longer used in Shorewall 4.4 but it was
+    still being released.
+
 ----------------------------------------------------------------------------
              K N O W N   P R O B L E M S   R E M A I N I N G
 ----------------------------------------------------------------------------
